[project]
name = "metahack-openenv"
version = "0.1.0"
description = "Cloud Environment RL for Meta OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true