[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metahack-openenv"
version = "0.1.0"
description = "Cloud Environment RL for Meta OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"  # <-- Added: Mandatory for the hackathon
]

# This defines the "server entry point" the validator specifically asked for
[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
managed = true